<resources>
    <string name="app_name">Walkether</string>
    <string name="login">войти</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="register">зарегаться</string>
    <string name="missing_internet">Нет доступа к интернету. Пожалуйста подключитесь к нему</string>
    <string name="bio">о себе</string>
    <string name="name">имя</string>
    <string name="name_is_emtpy">ваше имя пустое</string>
    <string name="bio_is_empty">напишите хоть что-нибудь</string>
    <string name="login_with_another_google_account">войти через другой аккаунт</string>
    <string name="maps">Карта</string>
    <string name="profile">Профиль</string>
    <string name="walkings">Прогулки</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="logout">выйти</string>
    <string name="change_avatar">изменить аватарку</string>
    <string name="login_through_google_account">Войдите через ваш Google аккаунт</string>
    <string name="not_exists_google_account">К сожалению произошла ошибка, возможно такого Google аккаунта уже не существует</string>
    <string name="delete_account">Удалить ваш аккаунт</string>
    <string name="do_you_want_to_delete_your_account">Вы действительно хотите удалить ваш аккаунт?</string>
    <string name="yes">ага</string>
    <string name="not">неа</string>
    <string name="change_name_and_bio">Изменить имя или описание</string>
    <string name="change">Изменить</string>
</resources>