<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_button"
        android:text="@string/login_with_another_google_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_margin="0dp"
        app:icon="@drawable/ic_back_24"
        android:drawableStart="@drawable/ic_back_24"
        android:drawableTint="?attr/colorPrimary"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatar_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:src="@drawable/girl2"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/gender"
        app:layout_constraintTop_toBottomOf="@id/avatar_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/male_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/female_checkbox"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/My.TextInputLayout.FilledBox.Padding"
        app:layout_constraintTop_toBottomOf="@id/gender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:gravity="top|start" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bio_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/My.TextInputLayout.FilledBox.Padding"
        app:layout_constraintTop_toBottomOf="@id/name_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bio_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="5"
            android:hint="@string/bio"
            android:gravity="top|start"
            android:maxLength="100"
            android:maxLines="5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@id/bio_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/google_error"
        android:id="@+id/google_error_box"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>